# rammingen

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: check-android.yml  checks.yml  ci.yml  docker-image.yml
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/me/darkecho/rammingen/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/me/darkecho/rammingen/: Application.kt  FileBrowserScreen.kt  FileBrowserViewModel.kt  MainActivity.kt  NativeBridge.kt  RunActivity.kt  SettingsActivity.kt  TextEditorActivity.kt
android/app/src/main/java/me/darkecho/rammingen/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/layout/: settings_activity.xml
android/app/src/main/res/menu/: app_menu.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: preferences.xml
android/app/src/test/java/me/darkecho/rammingen/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/native/: Cargo.toml  build.sh
android/native/src/: lib.rs
client/: Cargo.toml
client/src/: cli.rs  client.rs  config.rs  counters.rs  db.rs  download.rs  encryption.rs  info.rs  lib.rs  ls.rs  main.rs  path.rs  pull_updates.rs  rules.rs  sync.rs  term.rs  upload.rs
etc/: .env  Dockerfile  config-server.template.json  config.template.json  docker-compose.yml  init-db.sh  rammingen-server.template.conf  rammingen.template.conf
etc/proxy/: nginx.conf
protocol/: Cargo.toml
protocol/src/: credentials.rs  encoding.rs  endpoints.rs  lib.rs  path.rs  util.rs
sdk/: Cargo.toml
sdk/benches/: encryption.rs
sdk/src/: content.rs  lib.rs  server.rs  signal.rs
sdk/src/client/: download.rs  mod.rs
sdk/src/crypto/: cipher.rs  io.rs  mod.rs
server/: Cargo.toml  README.md  schema.sql  sqlx-data.json
server/.sqlx/: query-0217e2036d519674f1b92c1764301471fad7e0c4ced9721f2cc91f2f0ec678ac.json  query-130935ad170bdc1e5261c55711de62e79db5a6f08aa2d7a07c5f185718659b62.json  query-19592c54bd1e1aa5a71dbcd32bc49431afc080a3fbc181e4d54adea217dfe217.json  query-1a81d923f194f51c9dbce68d976a61723600986bba88386d114e22e701cd6310.json  query-1f1a63bed923015a1e1f26b6a15403784ea8a7e3ba169d2964c3e32299576834.json  query-22c9f9618d232fca2fdfb7d56e11d97a060855165efa6aec0cefcdfa5dac3391.json  query-23541efb774b5c23fa58288fa3f7e1559dcef334ab7c87f192a92c3d1dfd9a04.json  query-361c71d6266a0377a40c394900e7deada8963dcf2349e0d447d68e72b0a67ef4.json  query-4434ec55fe50b6d17c0bb8fc0ae7322c76016f3d48f044b25497e48a98c7576f.json  query-4539c42c05e25e37577e670ba211df60d18aee110da0e2bbd9ec7212023de903.json  query-4c33c1bc082fcd249842b520f1ab5a3e366b3e121259094b19b9489e72df50ba.json  query-50c192b63e5282d9224ba50f6002b3c4c53081a0aa100b3f57790fa159faa1ae.json  query-51a4e76cd81fd14972bc368e93ee61a2cb94e164111ecb0738f0cdd9510b3690.json  query-53d5f5bbbb16979c34322ed58f576750d1daab3c8114bf7d08e8ba2aef436109.json  query-585f2701f837b83e1ab1b496422757eaf02127667e6cb0c34e74aab7411fd0f1.json  query-61042960e65b97bc40c998ac74e5fb7eafc5a8ab5e448d2925e5ee2d8fb87d71.json  query-6253be3872bcad8653e2d1572ab5c4e19197c236ab5960d419649d9c0fbf06ff.json  query-6335af1ee12d60434bc78aab6055611f8021df1cf7255b350dc40f8393ec27dd.json  query-6907ae13f2129242e1e82d8a3ba0a3bad8b83a39e5efec695e2911fe7719c8f8.json  query-6c7010e9c628a9448b51b1ea980625a2701ea14736ee5341f9cd3e93146918b4.json  query-744eb8f57594dad35b2190218893cd298b8296a801c8116985b8f33f31edebec.json  query-757e54c861bfd34c687f11fe4331456cf69ab6a94c29f95399a82afad279369d.json  query-844faa9e9aff57024673809978425b667e1dedcc11e7f00cfdc7aebe9e7968dc.json  query-93f2f96d0a5b1247557cc869e02c14b6b17630eeac13136cd3ec5dfa5d51ac09.json  query-9832cbbf18ce28befe15397b74e4973ac9ba7f40bc1261e2e2f33339a1d181f2.json  query-9a4ef30f7740f66c305054d97c61f5280a1efdd13b16cd971bbff9923a116afc.json  query-a0e86571e3f348bbf9027c4ef38625fac59bda26eabffecc09b9088ac9c50b0d.json  query-ad1e724fbcfd0087189153bf35b3eb9ea912c45f595299c961cadb4b2ec0fc6d.json  query-ad6f15e8e30c8d858ec5f1dbf3215512ea24a16bd53537c4a7e3027b8cef36a5.json  query-b16b2bff3f38bbd2fb350c453166efa589fe0501c4d56c4060c1be97ff6e4330.json  query-b1c22728eab441002333f835aef262e2e7606667cf0a9bcb53dca5802a6316a6.json  query-c126b79e8e76ef2c3056410487c6373efdfd204a55e59d491d2efaf73f9554fd.json  query-c4672ad9ea39036ce20d2923a353b5ff0b5d7ffbbc3f21bf3a9550e756137895.json  query-c85715568956da899d6b8284d4200dc3591c68765060db8c84eb8e48e3752dc8.json  query-ccc9ced9afb4d73a28809e37e53d3220da17df524cad83fb0ffa9c7a56d7b540.json  query-d36b3abc22b25a834a8b197023be5f2367554b3ea967670c14dfa8910b462fa7.json  query-f0d094608e44a9f1ed752e8952cf878c47dbcd020786b770669fdf867922e74d.json  query-f815828d8762fbe3cf02b555e4afc28a6887ea979377d2866166ca71c0af4e8a.json  query-f9ef8cffaf34bccc887781a9cb68d23bc9b066c613d381818630932d6f3acdd1.json  query-fa2b6a95b40cd777df16cacca694b2825b3357875c942f8b64864fa3982f45f3.json  (+3 more)
server/migrations/: 00_initial.sql  01_initial.sql  02_add_server_id.sql  03_add_is_symlink.sql
server/src/: content_streaming.rs  handler.rs  lib.rs  main.rs  snapshot.rs  storage.rs  util.rs
tests/: Cargo.toml
tests/src/: diff.rs  main.rs  shuffle.rs
