[workspace]
members = [
    "server",
    "client",
    "protocol",
    "sdk",
    "tests",
    "android/native",
]
resolver = "2"

[workspace.dependencies]
aes-siv = { version = "0.7", features = ["std"] }
anyhow = { version = "1.0.70", features = ["backtrace"] }
base64 = "0.21"
bincode = "1.3.3"
byte-unit = { version = "4.0.19", default-features = false, features = ["serde"] }
byteorder = "1.4.3"
bytes = "1.4.0"
cadd = "0.1.0"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4.2.1", features = ["derive"] }
crossterm = "0.26.1"
deflate = "1"
derivative = "2.2"
derive_more = { version = "1", features = ["as_ref", "display", "from", "into"] }
dirs = "4.0.0"
dunce = "1.0.4"
fs-err = "2.9"
fs2 = "0.4.3"
futures = "0.3.28"
futures-util = "0.3.27"
generic-array = "0.14.6"
hex = "0.4.3"
http-body-util = "0.1.0-rc.2"
humantime = "2.1.0"
humantime-serde = "1.1.1"
hyper = { version = "1.4.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.7", features = ["server-graceful", "tokio"] }
inflate = "0.4.5"
itertools = "0.10.5"
jni = { version = "0.21.1", default-features = false }
json5 = "0.4.1"
keyring = { version = "3.6.2", features = ["apple-native", "sync-secret-service", "windows-native"] }
# mac-notification-sys 0.6.2 doesn't build.
mac-notification-sys = "=0.6.1"
notify-rust = "4.11.3"
once_cell = "1.17.1"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
portpicker = "0.1.1"
prettytable = "0.10.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.7.3"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "stream", "rustls-tls"] }
rpassword = "7.4"
scopeguard = "1.2.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.134"
serde_regex = "1.1.0"
sha2 = "0.10.6"
shell-words = "1.1.0"
sled = "0.34.7"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "offline", "time"] }
stream_generator = "0.1"
tempfile = "3.5"
tokio = { version = "1.26", features = ["full"] }
tokio-stream = "0.1.12"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = { version = "2.3.1", features = ["serde"] }

[patch.crates-io]
cadd = { path = "/Users/ri/p/cadd" }
