[workspace]
members = [
    "server",
    "client",
    "protocol",
    "sdk",
    "tests",
    "android/native",
]
resolver = "2"

[workspace.dependencies]
aes-siv = { version = "0.8.0-rc.2" }
anyhow = { version = "1.0.100", features = ["backtrace"] }
base64 = "0.22"
bincode = { version = "2.0.1", features = ["serde"] }
byte-unit = { version = "5.1.6", features = ["serde"] }
byteorder = "1.5.0"
bytes = "1.11.0"
cadd = "0.1.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
deflate = "1"
derivative = "2.2"
derive_more = { version = "2", features = ["as_ref", "display", "from", "into"] }
dirs = "6.0.0"
dunce = "1.0.5"
fs-err = "3.2"
fs2 = "0.4.3"
futures = "0.3.31"
futures-util = "0.3.31"
generic-array = "1.3.5"
hex = "0.4.3"
http-body-util = "0.1.3"
humantime = "2.3.0"
humantime-serde = "1.1.1"
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.18", features = ["server-graceful", "tokio"] }
inflate = "0.4.5"
itertools = "0.14.0"
jni = { version = "0.21.1", default-features = false }
json5 = "0.4.1"
keyring = { version = "3.6.3", features = ["apple-native", "sync-secret-service", "windows-native"] }
# mac-notification-sys 0.6.8 doesn't build.
mac-notification-sys = "=0.6.6"
notify-rust = "4.11.7"
once_cell = "1.21.3"
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
portpicker = "0.1.1"
pathdiff = "0.2.3"
prettytable = "0.10.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "rustls-tls"] }
rpassword = "7.4"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_regex = "1.1.0"
sha2 = "0.10.9"
shell-words = "1.1.0"
sled = "0.34.7"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "time"] }
stream_generator = "0.1"
tempfile = "3.23"
tokio = { version = "1.48", features = ["macros", "signal", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }

[profile.release]
debug = true
lto = true
