[package]
name = "rammingen"
version = "0.1.0"
edition = "2021"
default-run = "rammingen"
license = "MIT OR Apache-2.0"

[dependencies]
rammingen_protocol = { path = "../protocol" }
rammingen_sdk = { path = "../sdk" }

aes-siv.workspace = true
anyhow.workspace = true
base64.workspace = true
byteorder.workspace = true
chrono = { workspace = true, features = ["std", "clock", "serde"] }
derivative.workspace = true
derive_more = { workspace = true, features = ["from", "into"] }
fs-err.workspace = true
futures.workspace = true
generic-array.workspace = true
regex = "1.7.3"
serde = { workspace = true, features = ["derive"] }
serde_regex = "1.1.0"
sha2.workspace = true
stream_generator.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
json5 = "0.4.1"
url = { version = "2.3.1", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"] }
dirs = "4.0.0"
chacha20poly1305 = "0.10.1"
bytes = "1.4.0"
bincode = "1.3.3"
sled = "0.34.7"
itertools = "0.10.5"
crossterm = "0.26.1"
once_cell = "1.17.1"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
byte-unit = { version = "4.0.19", default-features = false, features = ["serde"] }
prettytable = "0.10.0"
dunce = "1.0.4"
hex = "0.4.3"
