[package]
name = "rammingen"
version = "0.1.0"
edition = "2021"
default-run = "rammingen"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[features]
default = ["keyring"]

keyring = ["dep:keyring"]

[dependencies]
rammingen_protocol = { path = "../protocol" }
rammingen_sdk = { path = "../sdk" }

anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
byte-unit = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
cadd = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
generic-array = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
itertools = { workspace = true }
json5 = { workspace = true }
keyring = { workspace = true, optional = true }
notify-rust = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
prettytable = { workspace = true }
regex = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_regex = { workspace = true }
sha2 = { workspace = true }
sled = { workspace = true }
stream_generator = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os="macos")'.dependencies]
mac-notification-sys = { workspace = true }
