[package]
name = "rammingen_protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["std", "clock", "serde"] }
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "offline", "time"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
derive_more = "0.99.17"
base64 = "0.21.0"
fs-err = "2.9.0"
bytes = "1.4.0"
tokio-stream = "0.1.12"
itertools = "0.10.5"
hex = "0.4.3"
