[package]
name = "rammingen_protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aes-siv.workspace = true
anyhow.workspace = true
byte-unit.workspace = true
chrono = { workspace = true, features = ["std", "clock", "serde"] }
derive_more = { workspace = true, features = ["as_ref", "from", "into"] }
futures.workspace = true
generic-array.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
base64 = "0.21.0"
fs-err = "2.9.0"
bytes = "1.4.0"
tokio-stream = "0.1.12"
itertools = "0.10.5"
hex = "0.4.3"
