[package]
name = "rammingen_protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aes-siv = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
byte-unit = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
generic-array = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
