[package]
name = "rammingen_sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bench]]
name = "encryption"
harness = false

[dependencies]
rammingen_protocol = { path = "../protocol" }

aes-siv = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
byteorder = { workspace = true }
deflate = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
generic-array = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
inflate = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
stream_generator = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = "0.7.0"
