[package]
name = "rammingen_sdk"
description = "File synchronization and backup SDK"
version = "0.1.0"

edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "encryption"
harness = false

[dependencies]
rammingen_protocol = { path = "../protocol" }

aes-siv = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
byteorder = { workspace = true }
cadd = { workspace = true }
deflate = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
generic-array = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
inflate = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
stream_generator = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = "0.7.0"
