[package]
name = "rammingen_server"
version = "0.1.0"
edition = "2021"
default-run = "rammingen-server"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rammingen-server"
path = "src/main.rs"

[[bin]]
name = "rammingen-admin"
path = "src/bin/admin.rs"

[dependencies]
rammingen_protocol = { path = "../protocol" }
rammingen_sdk = { path = "../sdk" }

anyhow.workspace = true
bincode.workspace = true
chrono = { workspace = true, features = ["std", "clock", "serde"] }
futures.workspace = true
hyper = { version = "1.4.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.7", features = ["tokio"] }
serde = { workspace = true, features = ["derive"] }
stream_generator.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures-util = "0.3.27"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "offline", "time"] }
json5 = "0.4.1"
fs-err = "2.9.0"
base64 = "0.21.0"
http-body-util = "0.1.0-rc.2"
tokio-stream = "0.1.12"
bytes = "1.4.0"
fs2 = "0.4.3"
humantime-serde = "1.1.1"
clap = { version = "4.2.1", features = ["derive"] }
dirs = "5.0.1"
