[package]
name = "rammingen_server"
version = "0.1.0"
edition = "2021"
default-run = "rammingen-server"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rammingen-server"
path = "src/main.rs"

[[bin]]
name = "rammingen-admin"
path = "src/bin/admin.rs"

[dependencies]
rammingen_protocol = { path = "../protocol" }
rammingen_sdk = { path = "../sdk" }

anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
fs-err = { workspace = true }
fs2 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http-body-util = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
json5 = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
stream_generator = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
