[package]
name = "rammingen_server"
description = "File synchronization and backup server"
version = "0.1.0"
default-run = "rammingen-server"

edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "rammingen-server"
path = "src/main.rs"

[[bin]]
name = "rammingen-admin"
path = "src/bin/admin.rs"

[dependencies]
rammingen_protocol = { path = "../protocol" }
rammingen_sdk = { path = "../sdk" }

anyhow = { workspace = true }
bytes = { workspace = true }
cadd = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
fs-err = { workspace = true }
fs2 = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
json5 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
stream_generator = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
