[package]
name = "rammingen_tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rammingen = { path = "../client" }
rammingen_server = { path = "../server" }
rammingen_protocol = { path = "../protocol" }

chrono = { workspace = true, features = ["std", "clock", "serde"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
tokio = { version = "1.26.0", features = ["full"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "offline", "time"] }
anyhow = { version = "1.0.70", features = ["backtrace"] }
tempfile = "3.5.0"
portpicker = "0.1.1"
fs-err = "2.9.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
json5 = "0.4.1"
rand = "0.8.5"
clap = { version = "4.2.1", features = ["derive"] }
futures = "0.3.28"
