[package]
name = "rammingen_tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rammingen = { path = "../client" }
rammingen_server = { path = "../server" }
rammingen_protocol = { path = "../protocol" }

anyhow.workspace = true
chrono = { workspace = true, features = ["std", "clock", "serde"] }
rand.workspace = true
reqwest = { version = "0.12.5", features = ["json", "stream"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "offline", "time"] }
tempfile = "3.5.0"
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
portpicker = "0.1.1"
fs-err = "2.9.0"
json5 = "0.4.1"
clap = { version = "4.2.1", features = ["derive"] }
futures = "0.3.28"
rand_chacha = "0.3.1"
