[package]
name = "rammingen_tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rammingen = { path = "../client" }
rammingen_server = { path = "../server" }
rammingen_protocol = { path = "../protocol" }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
json5 = { workspace = true }
portpicker = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
